--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       </div>
     </div>
 
-    <footer class="footer">
+<!--     <footer class="footer">
       <h3>@Created By Gaurav Garg</h3>
-    </footer>
+    </footer> -->
     <script src="app.js"></script>
   </body>
 </html>
