--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="box bg-black">
         <h2>Enter number between 1 to 100</h2>
         <input
-          type="text" class="form-control" id="userInput" placeholder="Enter Number Between 1 to 100" />
+          type="number" class="form-control" id="userInput" placeholder="Enter Number Between 1 to 100" />
         <button
           type="submit"
           class="btn btn-primary my-3"
